fix both tab wrap

--- a/src/app/components/city-location/city-location.component.scss
+++ b/src/app/components/city-location/city-location.component.scss
@@ -1,8 +1,8 @@
 @import "src/theme/variables.scss";
 
 .city-location {
-	// height: 100%;
-	// min-width: 300px;
+	height: 100%;
+	min-width: 300px;
 	border-radius: 5px;
 	border: 2px solid green;
 }
